# controllers/AllmoviesController.js
@@ -1,0 +1,43 @@
+/**
+ * The AllmoviesController file is a very simple one, which does not need to be changed manually,
+ * unless there's a case where business logic reoutes the request to an entity which is not
+ * the service.
+ * The heavy lifting of the Controller item is done in Request.js - that is where request
+ * parameters are extracted and sent to the service, and where response is handled.
+ */
+
+const Controller = require('./Controller');
+const service = require('../services/AllmoviesService');
+const createallmovies = async (request, response) => {
+  await Controller.handleRequest(request, response, service.createallmovies);
+};
+
+const deleteallmovies = async (request, response) => {
+  await Controller.handleRequest(request, response, service.deleteallmovies);
+};
+
+const getAllallmovies = async (request, response) => {
+  await Controller.handleRequest(request, response, service.getAllallmovies);
+};
+
+const getByParamsallmovies = async (request, response) => {
+  await Controller.handleRequest(request, response, service.getByParamsallmovies);
+};
+
+const getallmovies = async (request, response) => {
+  await Controller.handleRequest(request, response, service.getallmovies);
+};
+
+const updateallmovies = async (request, response) => {
+  await Controller.handleRequest(request, response, service.updateallmovies);
+};
+
+
+module.exports = {
+  createallmovies,
+  deleteallmovies,
+  getAllallmovies,
+  getByParamsallmovies,
+  getallmovies,
+  updateallmovies,
+};
