# models/index.js
@@ -1,8 +1,10 @@
+const allmovies = require('./allmovies');
 const deploys = require('./deploys');
 const movies = require('./movies');
 const users = require('./users');
 
 module.exports = {
+  allmovies,
   deploys,
   movies,
   users};
